Add woby docker-compose example

--- a/.env.sample
+++ b/.env.sample
@@ -3,17 +3,24 @@ APP_DEBUG=true
 APP_KEY=base64:S6DK7LlPqR7QSjisTQPznoImuqFEWx640gvkf/TyZfA=
 APP_TD=themosis
 
-APP_URL=http://localhost:8888/themosis/htdocs/
-WP_URL=http://localhost:8888/themosis/htdocs/cms
+APP_URL=http://localhost
+WP_URL=http://localhost/cms
 
+DATABASE_ROOT_PASSWORD=root
 DATABASE_NAME=themosis
 DATABASE_USER=root
 DATABASE_PASSWORD=root
-DATABASE_HOST=localhost
-DATABASE_PORT=8889
+DATABASE_HOST=mariadb
+DATABASE_PORT=3306
 
 MAIL_HOST=your-smtp-host
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=noreply@themosis.com
 MAIL_FROM_NAME=Themosis
+
+PROJECT_NAME=themosis
+PROJECT_BASE_URL=localhost
+PHP_TAG=7.4-dev-4.15.1
+APACHE_TAG=2.4-4.2.3
+MARIADB_TAG=10.4-3.8.0
